# Minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  icon.rc
assets/: icon.dds
minesweeper/: CMakeLists.txt  board.c  minesweeper.c  point.c  point_queue.c  point_queue.h
minesweeper/include/: board.h  minesweeper.h  point.h  types.h
src/: game_struct.h  main.c  state_handler.c  state_handler.h
src/graphics/: board_graphics.c  board_graphics.h  textures.h
src/input/: board_input.c  board_input.h
src/minesweeper/: board.c  board.h  minesweeper.c  minesweeper.h  point.c  point.h  types.h
src/utils/: time_utils.c  time_utils.h  util.c  util.h
